--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "hbs": "^3.0.1",
     "morgan": "^1.5.2",
     "nodemailer": "^1.3.4",
-    "serve-favicon": "^2.2.0",
-    "sqlite-wrapper": "^0.2.1"
+    "serve-favicon": "^2.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
