--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^2.9.0",
     "hbs": "^3.0.1",
     "morgan": "^1.5.2",
+    "newrelic": "^1.18.3",
     "nodemailer": "^1.3.4",
     "serve-favicon": "^2.2.0"
   },
