--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
   },
   "scripts": {
     "test": "grunt test",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
