--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "body-parser": "^1.12.3",
+    "bower": "^1.4.1",
     "compression": "^1.4.3",
     "cookie-parser": "^1.3.4",
     "debug": "^2.1.3",
@@ -67,7 +68,7 @@
   "scripts": {
     "test": "grunt test",
     "start": "node ./bin/www",
-    "postinstall": "bower install"
+    "postinstall": "node ./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
