--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
   ],
   "dependencies": {
     "angular": "1.3.x",
-    "ng-sortable": "~1.2.0"
+    "ng-sortable": "~1.2.0",
+    "angular-touch": "~1.3.15"
   },
   "devDependencies": {
     "angular": "1.3.x",
